# web-segment

./: .gitignore  Cargo.toml  index.html
src/: footer.rs  main.rs  navigation_bar.rs  page.rs  paragraph.rs
stylesheets/: animations.scss  footer.scss  index.scss  navigation_bar.scss  paragraph.scss
